# tds-2025-llm-analysis-quiz

./: .env  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: sync-to-hugging-face.yaml
app/: agent.py  config.py  llm_providers.py  main.py  middlewares.py  scraper.py  setup_logger.py  simple_agent.py  tools.py  tools_registry.py
app/agent/: agent_logger.py  simple_agent.py
app/agent/tools/: schema.py  tools.py
prompts/: agent_system_prompt.txt
scripts/: check_aipipe_usage.sh  get_system_prompt_response_id.py  run_server.sh  sample_openai.py  system_prompt_response_id_test.py  test.sh
test/: conftest.py  test_sumbit_quiz.py
